--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nome{
+  color: blue;
+}
+.teste{
+  margin-top: 30px;
+}
+p{
+  font-size: 30px
+}
+.header {
+  height: 100px;
+  background-color: #333;
+  color: whitesmoke;
+  margin-bottom: 15px;
+  text-align: center;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: whitesmoke;
+}
+
+
+
+.todo-item {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  border-bottom: 1px solid #cecece;
+  font-family: Roboto, sans-serif;
+  font-weight: 50;
+  font-size: 10px;
+  color: #333333;
+}
+
+.todo-list {
+  background-color: white;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;       /* Pack items from the left */
+  align-items: center;
+  border: 1px solid #efefef;
+  padding: 10px;
+}
+
+.todo-qtdlist {
+  display: flex;
+  color: black;
+  width: 100%;
+  align-items: center;
+  border: 1px solid #efefef;
+  justify-content: end;
+}
+.card {
+  /* Add shadows to create the "card" effect */
+  border-radius: 30px;
+  box-shadow: 4 4px 4px 0 rgba(0,0,0,0.2);
+  padding: 30px;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(202, 24, 24, 0.2);
 }
